--- a/visualizacion-2.html
+++ b/visualizacion-2.html
@@ -38,10 +38,16 @@
 </head>
 <body>
     <div class="container">
-        <h1>Visualización 3: Force Directed Graph</h1>
-        <h2>Force Directed Graph</h2>
+        <h1>Visualización 2: Force Directed Graph</h1>
+        <h2>Fuente datos:</h2>
+		Los datos utilizados han sido obtenidos de Kaggle. Se ha utilizado un dataset correspondiente a los principales fichajes realizados en el futbol entre los años 2000 a 2018. La gráfica se realizó utilizando sólo los fichajes en la liga española en la temporada 2017-2018.
 		<p></p>
-        <img src="La Liga 2017-2018.jpg" alt="La Liga">
+		<a href="https://www.kaggle.com/datasets/vardan95ghazaryan/top-250-football-transfers-from-2000-to-2018">Kaggle - Top 250 Football transfers from 2010 to 2018</a>
+		<p></p>
+        <h2>Creada con:</h2>
+		Para crear esta visualización se utilizó <a href="https://www.microsoft.com/es-es/power-platform/products/power-bi"><i>Power Bi</i></a>.
+		<p></p>
+		<img src="La Liga 2017-2018.jpg" alt="La Liga">
     </div>
 </body>
 </html>
