--- a/visualizacion-3.html
+++ b/visualizacion-3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Visualización de datos: PEC 2</title>
+    <title>Visualización 3: Spiral Plot</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -27,11 +27,6 @@
             font-size: 24px;
             margin-bottom: 5px;
         }
-        h3 {
-            color: #666;
-            font-size: 20px;
-            margin-bottom: 5px;
-        }
         img {
             max-width: 100%; 
             height: auto;
@@ -43,16 +38,16 @@
 </head>
 <body>
     <div class="container">
-        <h1>Visualización de datos: PEC 2</h1>
-		En esta web se presentan los resultados de la PEC 2 en la asignatura de Visualización de datos del Master de Ciencia de Datos de la UOC.</p>
-		<b>Autor:</b> Adrian Läufer Nicolás 
-        <h3><a href="visualizacion-1.html">Visualización 1 - Infografía</a></h3>
-        <p></p>
-        <h3><a href="visualizacion-2.html">Visualización 2 - Force Directed Graph</a></h3>
-        <p></p>
-        <h3><a href="visualizacion-3.html">Visualización 3 - Spiral Plot</a></h3>
-        <p></p>
+        <h1>Visualización 3: Spiral Plot</h1>
+        <h2>Fuente datos:</h2>
+		Los datos utilizados han sido obtenidos del portal de datos de la ciudad de München, donde se han extraido los datos de las estaciones de conteo de bicicletas. En concreto se han utilizado los datos de la estación de conteo en la calle Eberhardstrasse en los años 2018 a 2022.
+		<p></p>
+		<a href="https://opendata.muenchen.de/dataset/daten-der-raddauerzaehlstellen-muenchen-jahreszahlen">Open Data München - Daten der Raddauerzählstellen</a>
+		<p></p>
+        <h2>Creada con:</h2>
+		La visualización de los datos en forma de spiral plot ha sido creada mediante R-Studio. Para ello, se utilizó la library <a href="https://github.com/jokergoo/spiralize?tab=readme-ov-file"><i>spiralize</i></a>.
+		<p></p>
+		<img src="visualizacion-3.jpeg" alt="Spiral Plot">
     </div>
 </body>
 </html>
-
